multiple enemies added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,9 +4,11 @@
         "atkl",
         "bcolors",
         "elexir",
+        "elixer",
         "endc",
         "maxhp",
         "maxmp",
+        "mega",
         "okblue",
         "okgreen",
         "player",
